--- a/glm.cabal
+++ b/glm.cabal
@@ -21,7 +21,7 @@ library
   -- other-extensions:
   build-depends:
       base >=4.11 && <4.13
-    , dense-linear-algebra >= 0.1
+    , hmatrix >= 0.18
     , math-functions >= 0.2
     , statistics >= 0.15
     , vector >= 0.12
@@ -39,7 +39,7 @@ test-suite test-glm
       Binomial
   build-depends:
       base >=4.9 && < 5.0
-    , dense-linear-algebra >= 0.1
+    , hmatrix >= 0.18
     , statistics >= 0.15
     , tasty >= 0.11
     , tasty-hunit >= 0.09
